# QEMUAppleSilicon

./: README.md  README.rst  configure  hmp-commands-info.hx  meson.build
.github/workflows/: blank.yml  build.yaml
accel/tcg/: cputlb.c
block/: file-posix.c
contrib/ivshmem-server/: ivshmem-server.c
crypto/: cipher-builtin.c.inc  cipher-nettle.c.inc  cipher.c  cipherpriv.h
fsdev/: 9p-marshal.h
hw/: Kconfig  meson.build
hw/9pfs/: 9p-local.c
hw/arm/: Kconfig  apple_a13.c  apple_a13_gxf.c  apple_a13_gxf.h  apple_a9.c  apple_dart.c  apple_sart.c  apple_sep.c  fsl-imx8mp.c  meson.build  s8000.c  t8030.c  xlnx-zynqmp.c  xnu.c  xnu_dtb.c  xnu_kpf.c  xnu_mem.c  xnu_pf.c
hw/audio/: meson.build
hw/block/: Kconfig  apple_ans.c  apple_nvme_mmu.c  meson.build
hw/char/: Kconfig  apple_uart.c  meson.build  trace-events
hw/display/: adbe_v2.c  apple_displaypipe_v2.c  apple_displaypipe_v4.c  apple_h12p.c  meson.build
hw/dma/: apple_sio.c  meson.build
hw/gpio/: apple_gpio.c  meson.build
hw/hppa/: Kconfig
hw/i2c/: apple_i2c.c  apple_soft_i2c.c  meson.build
hw/misc/apple-silicon/: aes.c  aop.c  baseband.c  chestnut.c  mailbox.c  meson.build  pmu-d2255.c  roswell.c  smc.c  spmi-baseband.c  spmi-pmu.c
hw/misc/apple-silicon/a7iop/: core.c  mailbox.c  private.h  regs-v2.c  regs-v4.c  regs_v2.c  regs_v4.c  rtbuddy.c  rtkit.c  trace-events
hw/misc/apple-silicon/a7iop/mailbox/: core.c  regs-v2.c  regs-v4.c  trace-events
softmmu/: vl.c
system/: vl.c
ui/: cocoa.m  gtk.c  sdl2.c
util/: bitops.c  crc16.c  error-report.c  meson.build  oslib-posix.c
(+150 files in other folders)
